--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 .wrapper {
-    background: url(../background.jpg);
+    background: url(background.jpg);
     background-repeat: no-repeat;
     margin: auto;
     display: flex;
